Adding a Hamburger icon

--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -19,7 +19,7 @@
     color: #40A4C8;
 }
 
-@media (min-widht: 500px) {
+@media (min-width: 500px) {
     .NavigationItem {
         margin: 0;
         display: flex;
@@ -29,7 +29,7 @@
     }
     
     .NavigationItem a {
-        color: wheat;
+        color: white;
         height: 100%;
         padding: 16px 10px;
         border-bottom: 4px solid transparent;
@@ -38,6 +38,8 @@
     .NavigationItem a:hover,
     .NavigationItem a:active,
     .NavigationItem a.active {
+        background-color: #8F5C2C;
+        border-bottom: 4px solid #40A4C8;
         color: white;
     }
 }
