--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -17,12 +17,12 @@
     height: 100%;
 }
 
- .Logo {
+.Logo {
     height: 80%;
- }
+}
 
- @media (min-width: 499px) {
+@media (max-width: 499px) {
     .DesktopOnly {
         display: none;
     }
- }
+}
